# Summarize-Translate-A-Smart-Web-Application

./: README.md  app.py  pyproject.toml  summa.py
static/css/: style.css
static/js/: script.js
templates/: index.html  result.html
utils/: pdf_extractor.py  pdf_generator.py  scraper.py  summarizer.py  translator.py
